--- a/index.html
+++ b/index.html
@@ -2,31 +2,28 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>test</title>
+    <title>stopwatch</title>
     <link rel="stylesheet" href="style.css">
     <script src="jquery-3.6.0.min.js"></script>
     <script src="content.js"></script>
 </head>
 <body>
-  <div class="main" id="test">
+  <div class="main">
     <div class='header'>
       <p class="time" id = "time">00:00</p>
-      <!-- <div class="battery">
-        <img src="img/battery_mark5.png" alt="バッテリー">
-      </div> -->
     </div>
     <div class="button-section">
       <div class="button-section-row">
         <div class="button-box">
-          <button type="button" id="start" class="button-icon"><img src="img/start.png" alt="sample"></button>
+          <button type="button" id="start" class="button-icon"><img src="img/start.png" alt="start"></button>
           <p class="button-name">start</p>
         </div>
         <div class="button-box">
-          <button type="button" id="stop" class="button-icon"><img src="img/stop.png" alt="sample"></button>
+          <button type="button" id="stop" class="button-icon"><img src="img/stop.png" alt="stop"></button>
           <p class="button-name">stop</p>
         </div>
         <div class="button-box">
-          <button type="button" id="reset" class="button-icon"><img src="img/reset.png" alt="sample"></button>
+          <button type="button" id="reset" class="button-icon"><img src="img/reset.png" alt="reset"></button>
           <p class="button-name">reset</p>
         </div>
       </div>
